[gd_scene load_steps=6 format=3 uid="uid://c2lms0i88p3ts"]

[ext_resource type="Script" path="res://Slotmachine/Scripts/wheel_collection.gd" id="1_n7iip"]
[ext_resource type="PackedScene" uid="uid://borc5uon4dfr6" path="res://Slotmachine/Scenes/Wheel.tscn" id="2_qwyqg"]

[sub_resource type="Animation" id="Animation_545lb"]
resource_name = "spin_loop"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spin"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wheel2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spin"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wheel3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spin"
}]
}

[sub_resource type="Animation" id="Animation_lu13y"]
resource_name = "stop_spin"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Wheel")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_spinning"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wheel2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_spinning"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Wheel3")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_spinning"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4hlc"]
_data = {
"spin_loop": SubResource("Animation_545lb"),
"stop_spin": SubResource("Animation_lu13y")
}

[node name="WheelCollection" type="Node2D"]
script = ExtResource("1_n7iip")

[node name="Wheel" parent="." instance=ExtResource("2_qwyqg")]

[node name="Wheel2" parent="." instance=ExtResource("2_qwyqg")]
position = Vector2(41, 0)

[node name="Wheel3" parent="." instance=ExtResource("2_qwyqg")]
position = Vector2(84, -1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w4hlc")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
